# idaidle

./: .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  FindIdaSdk.cmake  README.md  idaidle.cc
.github/workflows/: cmake.yml
